# handwritten-tts

./: .env  .gitignore  README.md  main.py  packages.txt  pyproject.toml  requirements.txt
api/: hand_text.py  voice_clone.py
ui/: ui.py
