[tool.poetry]
name = "tts-project"
version = "0.1.0"
description = "Text to speech project"
authors = ["litmus-zhang <abdulsalamlukmon9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
opencv-python = "^4.11.0.86"
pytesseract = "^0.3.13"
streamlit-drawable-canvas = "^0.9.3"
gtts = "^2.5.4"
styletts2 = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
